--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - run: flutter pub get
         working-directory: ./
       - run: flutter build web  --base-href='/occaz/'
-        working-directory: ./s
+        working-directory: ./
       # Publish to GitHub Pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
