--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.3
   global_configuration: ^2.0.0-nullsafety.1
   data_table_2: ^2.5.3
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
